# tap-text-anywhere

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
tap_text_anywhere/: __init__.py  client.py  files.py  streams.py  tap.py
tests/: __init__.py  test_core.py
