[tool.poetry]
name = "radbrt-tap-text-anywhere"
version = "0.0.1"
description = "`tap-text-anywhere` is a Singer tap for text-anywhere, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Henning Holgersen"]
keywords = [
    "ELT",
    "text-anywhere",
]
license = "Apache-2.0"
packages = [
    { include = "tap_text_anywhere" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.28.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
textract = { version = "^1.6.5" }
fsspec = "^2023.5.0"
s3fs = { version = "^2023.5.0", optional = true}
langchain = { version = "^0.0.216" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.28.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_text_anywhere"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_text_anywhere"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-text-anywhere = 'tap_text_anywhere.tap:Tap_text_anywhere.cli'
